Add route to create new shop
